static/css/style.css
/* ... */
.offerings-container::before,
.offerings-container::after {
    content: "";
    display: block;
    position: absolute;
    height: 100%;
    width: 10vw;
    background-image: linear-gradient(90deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)) 
}

.offerings-container::after {
    top: 0;
    right: 0;
    background-image: linear-gradient(270deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)) 
}

.carousel-tag {
    font-size: 1.5em;
    font-weight: 700;
    margin: 0.5vw 0 0 4vw;
    z-index: 6;
    position: relative;
}

.carousel-offerings ~ i {
    top: 50px;
    width: 8vw;
    height: -webkit-fill-available;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
}

.carousel-offerings ~ .fa-chevron-left {
    flex-direction: column-reverse;
    text-align: end;
}

.carousel-offerings ~ .fa-chevron-right {
    right: 0;
}

.container.list-container {
    width: 90%;
    margin-left: 5%;
    min-height: 60vh;
}

.list-container .movie-poster {
    padding: 7% 3%;
}

.list-container button {
    top: 20%;
}

h1,
h2,
h3,
.logos-heading,
label {
    color: var(--off-white);
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 500;
}

.container label {
    font-size: 1.3em;
}

select {
    color: var(--off-white);
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    height: 30px;
    font-family: 'Montserrat', sans-serif;
    border: none;
}

/* Sign In page */

.row .form-input:-webkit-autofill,
.row .form-input:-webkit-autofill:focus {
  transition: background-color 0s 600000s, color 0s 600000s;
  border: none;
}

.signup-container {
    width: fit-content;
    min-width: 50%;
}

.login input[type="checkbox"] {
    opacity: 1 !important;
    margin: 0.5% 0 0 0.9%;
}

label[for="id_remember"] {
    cursor: pointer;
}

.hightlight-link {
    font-size: 1.2em;
    color: var(--highlight-blue);
}

.hightlight-link:hover, .hightlight-link:focus {
    text-decoration: underline;
}

.row .form-input {
    background-color: rgba(0, 0, 0, 0.5) !important;
    border-radius: 0.7em !important;
    color: var(--off-white);
    padding-left: 4% !important;
    max-height: fit-content !important;
}

/* Button style */

button.btn,
input[type='button'],
input[type='submit'] {
    border-radius: 0.5em;
    box-shadow: 0 0 10px 5px #000000;
    box-shadow: 0 0 10px 5px #000000 inset;
    color: #000000;
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 700;
}

.btn-red {
    background-color: var(--highlight-red);
}

.btn-blue {
    background-color: rgba(108, 229, 232, 0.7);
}

.btn-blue-bright {
    background-color: rgba(108, 229, 232, 1);
}

/* Roulette carousel style */

.carousel {
    margin-bottom: 5vh;
}

.carousel-roulette {
    perspective: 500px;
    height: 300px;
    max-width: 620px !important;
}

.carousel .carousel-item {
    width: 150px;
    opacity: 1 !important;
}

.remove-one-title,
.add-one-title,
.close-button,
.movie-reel-button {
    opacity: 0.7;
    border-radius: 50%;
    border: none;
    background-color: rgba(0, 0, 0, 0);
    cursor: pointer;
}

.remove-one-title {
    bottom: -25%;
    right: 67%;
}

.add-one-title {
    bottom: 42%;
    left: 41%;
}

.remove-one-title i,
.add-one-title i,
.close-button i {
    font-size: 2.5em;
    color: var(--off-white);
}

.remove-one-title:hover,
.add-one-title:hover,
.close-button:hover,
.movie-reel-button:hover {
    opacity: 1;
}

.remove-from-list {
    top: 5vh !important;
}

.empty-carousel-item {
    background-color: #000000;
    color: #ffffff;
    height: 77% !important;
}

.movie-poster {
    cursor: pointer;
}

.movie-reel-button img {
    height: 1.2em;
    padding: 0.2em 0 0 0.4em;
}

.overlay-container {
    margin-top: 5%;
}

.overlay, .contact-overlay {
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(44, 42, 42, 0.94);
    color: var(--off-white);
    display: none;
    z-index: 5;
    height: -webkit-fill-available;
}

.overlay-img {
    margin: 13% 0;
}

#overlay-heading {
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 500;
    padding-bottom: 0.5em;
}

#star {
    color: gold;
}

#tmdb {
    color: #000;
    border-radius: 0.4em;
    background-color: rgb(63, 238, 238);
    font-weight: 700;
    padding: 0.3em;
}

.overlay-highlight {
    padding: 0.3em 1.4em;
    border-radius: 0.4em;
    background-color: var(--darker-grey);
    border: var(--highlight-blue) solid 0.2em;
}

.my-lists-overlay {
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 500;
    font-size: 1.5em;
    margin: 5% 0;
}

.my-lists-overlay i {
    font-size: 1.2em;
    padding: 5%;
}

i[data-listed="true"] { 
    background-color: var(--highlight-blue);
}

.close-button {
    right: 0;
}

/* My Lists style */

.type-choice div select {
    background-color: rgba(0, 0, 0, 0);
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 500;
    font-size: 1.5em;
    height: 1.7em;
    margin: 4vh 0;
}

select option {
    background-color: var(--dark-grey) !important;
}

.lists-menu {
    color: var(--off-white);
    font-family: 'Be Vietnam Pro', sans-serif;
    font-weight: 700;
    font-size: 1.1em;
}

.lists-menu a li {
    padding: 3% 15%;
}
.lists-menu a i {
    font-size: 1.5em;
    margin: 0.6em 0;
}

.menu-profile {
    flex-wrap: wrap;
    align-content: flex-end !important;
}

.menu-profile a {
    width: fit-content;
}

.menu-profile-image {
    width: 3em;
    top: -0.5em
}

.menu-profile-placeholder-image {
    width: 3em
}

.menu-profile-image-container {
    height: 3em;
    width: 3em;
    overflow: hidden;
    border-radius: 50%;
}

.menu-profile-status {
    line-height: 1em;
}

.menu-profile-status-wrapper {
    flex-direction: column;
    justify-content: center;
    margin: 0 0.5em 0 0;
    text-align: end;
}

.menu-profile-wrapper {
    justify-content: flex-end;
}

a {
    color: inherit;
}

.shows-list {
    display: none;
}
/* ... */

